add testDRModeWithAllSegmentsOnSecondary