@@ -19,12 +19,13 @@ package org.apache.jackrabbit.oak.segment.azure;
 import com.azure.storage.blob.BlobContainerClient;
 import com.azure.storage.blob.models.BlobItem;
 import com.azure.storage.blob.models.BlobStorageException;
+import com.azure.storage.blob.models.BlobType;
 import com.azure.storage.blob.models.ListBlobsOptions;
-import org.apache.jackrabbit.oak.api.CommitFailedException;
+import com.azure.storage.blob.options.BlockBlobSimpleUploadOptions;
+import com.azure.storage.blob.specialized.AppendBlobClient;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStore;
 import org.apache.jackrabbit.oak.segment.SegmentNodeStoreBuilders;
 import org.apache.jackrabbit.oak.segment.file.FileStore;
-import org.apache.jackrabbit.oak.segment.file.InvalidFileStoreVersionException;
 import org.apache.jackrabbit.oak.segment.remote.RemoteUtilities;
 import org.apache.jackrabbit.oak.spi.commit.CommitInfo;
 import org.apache.jackrabbit.oak.spi.commit.EmptyHook;
@@ -36,14 +37,16 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import static com.azure.storage.blob.models.BlobType.APPEND_BLOB;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
@@ -126,11 +129,12 @@ public class AzureDRModeTest {
             }
         }
 
-        // Also copy all non-segment blobs (closed markers, graph, bindex, etc.) to secondary
+        // Also copy archive-internal non-segment blobs (closed markers, graph, bindex) to secondary.
+        // Do NOT copy root-level files (journal, manifest) — secondary is only for segment data.
         List<BlobItem> allBlobs = listAllBlobs(primaryReadClient, ROOT_PREFIX);
         for (BlobItem blob : allBlobs) {
             String name = AzureUtilities.getName(blob);
-            if (!SEGMENT_PATTERN.matcher(name).matches()) {
+            if (!SEGMENT_PATTERN.matcher(name).matches() && blob.getName().contains(".tar/")) {
                 copyBlobBetweenAzuriteInstances(primaryReadClient, secondaryWriteClient, blob.getName());
             }
         }
@@ -172,7 +176,7 @@ public class AzureDRModeTest {
             SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
             NodeState root = ns.getRoot();
 
-            // 6. Verify ALL original content is readable
+            // 7. Verify ALL original content is readable
             for (int i = 0; i < 20; i++) {
                 NodeState child = root.getChildNode("node-" + i);
                 assertTrue("node-" + i + " should exist", child.exists());
@@ -180,31 +184,123 @@ public class AzureDRModeTest {
                 assertNotNull("data property should exist on node-" + i, child.getString("data"));
             }
 
-            // 7. Write new content - should go to primary only
+            // 8. Write new content - should go to primary only
             NodeBuilder builder = ns.getRoot().builder();
             builder.child("dr-new-node").setProperty("drProp", "drValue");
             ns.merge(builder, EmptyHook.INSTANCE, CommitInfo.EMPTY);
             fs.flush();
         }
 
-        // 8. Verify no new blobs appeared on secondary
+        // 9. Verify no new blobs appeared on secondary
         int secondaryBlobCountAfter = listAllBlobs(secondaryReadClient, ROOT_PREFIX).size();
         assertEquals("No new blobs should appear on secondary after DR writes",
                 secondaryBlobCountBefore, secondaryBlobCountAfter);
 
-        // 9. Verify new content is on primary
+        // 10. Verify new content is on primary
         AzurePersistence primaryOnly = new AzurePersistence(primaryReadClient, primaryWriteClient, primaryNoRetryClient, ROOT_PREFIX);
         try (FileStore fs = FileStoreTestUtil.createFileStore(folder.newFolder(), primaryOnly)) {
             SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
             assertEquals("drValue", ns.getRoot().getChildNode("dr-new-node").getString("drProp"));
         }
 
-        // 10. Verify new content is NOT on secondary
+        // 11. Verify no new blobs appeared on secondary (writes only went to primary)
+        int secondaryBlobCountFinal = listAllBlobs(secondaryReadClient, ROOT_PREFIX).size();
+        assertEquals("No new blobs should appear on secondary after DR writes",
+                secondaryBlobCountBefore, secondaryBlobCountFinal);
+    }
+
+    /**
+     * All segments live exclusively on secondary (the backup). Primary is empty.
+     * Only non-segment blobs (journal, manifest, closed markers, etc.) are copied
+     * to primary so the FileStore can initialize. Open FileStore in DR mode and
+     * verify all content is readable. Then write new content and verify it lands
+     * on primary only.
+     */
+    @Test
+    public void testDRModeWithAllSegmentsOnSecondary() throws Exception {
+        // 1. Write content to secondary producing 10+ segment blobs
+        AzurePersistence secondaryPersistence = new AzurePersistence(secondaryReadClient, secondaryWriteClient, secondaryNoRetryClient, ROOT_PREFIX);
+        try (FileStore fs = FileStoreTestUtil.createFileStore(folder.newFolder(), secondaryPersistence)) {
+            SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
+            for (int i = 0; i < 20; i++) {
+                NodeBuilder builder = ns.getRoot().builder();
+                builder.child("node-" + i).setProperty("data", createLargeString(i));
+                builder.child("node-" + i).setProperty("index", i);
+                ns.merge(builder, EmptyHook.INSTANCE, CommitInfo.EMPTY);
+                fs.flush();
+            }
+        }
+
+        List<BlobItem> secondarySegments = listSegmentBlobs(secondaryReadClient);
+        assertTrue("Expected at least 10 segment blobs on secondary, got " + secondarySegments.size(),
+                secondarySegments.size() >= 10);
+
+        // 2. Copy only non-segment blobs (journal, manifest, closed markers, etc.) to primary.
+        //    Journal blobs are AppendBlobs and must be copied preserving their blob type.
+        List<BlobItem> allSecondaryBlobs = listAllBlobs(secondaryReadClient, ROOT_PREFIX);
+        for (BlobItem blob : allSecondaryBlobs) {
+            String name = AzureUtilities.getName(blob);
+            if (!SEGMENT_PATTERN.matcher(name).matches()) {
+                copyBlobBetweenAzuriteInstances(secondaryReadClient, primaryWriteClient, blob.getName());
+            }
+        }
+
+        assertTrue("Primary should have no segment blobs", listSegmentBlobs(primaryReadClient).isEmpty());
+
+        // 3. Open FileStore in DR mode: reads fall back to secondary
+        ReadFallbackPolicy fallbackPolicy = new ReadFallbackPolicy(secondaryAzurite.getBlobEndpoint());
+        BlobContainerClient fallbackReadClient = primaryAzurite.getContainerClientWithPolicies(
+                CONTAINER_NAME, null, fallbackPolicy);
+
+        AzurePersistence drPersistence = new AzurePersistence(
+                fallbackReadClient, primaryWriteClient, primaryNoRetryClient,
+                secondaryReadClient, ROOT_PREFIX, null, null);
+
+        int secondaryBlobCountBefore = listAllBlobs(secondaryReadClient, ROOT_PREFIX).size();
+
+        try (FileStore fs = FileStoreTestUtil.createFileStore(folder.newFolder(), drPersistence)) {
+            SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
+            NodeState root = ns.getRoot();
+
+            // 4. Verify ALL content is readable from secondary
+            for (int i = 0; i < 20; i++) {
+                NodeState child = root.getChildNode("node-" + i);
+                assertTrue("node-" + i + " should exist", child.exists());
+                assertEquals(i, (long) child.getLong("index"));
+                assertNotNull("data property should exist on node-" + i, child.getString("data"));
+            }
+
+            // 5. Write new content — should go to primary only
+            NodeBuilder builder = ns.getRoot().builder();
+            builder.child("dr-written").setProperty("source", "primary");
+            ns.merge(builder, EmptyHook.INSTANCE, CommitInfo.EMPTY);
+            fs.flush();
+        }
+
+        // 6. Verify no new blobs on secondary
+        int secondaryBlobCountAfter = listAllBlobs(secondaryReadClient, ROOT_PREFIX).size();
+        assertEquals("No new blobs should appear on secondary",
+                secondaryBlobCountBefore, secondaryBlobCountAfter);
+
+        // 7. Verify new content is readable (re-open in DR mode since primary lacks older segments)
+        ReadFallbackPolicy fallbackPolicy2 = new ReadFallbackPolicy(secondaryAzurite.getBlobEndpoint());
+        BlobContainerClient fallbackReadClient2 = primaryAzurite.getContainerClientWithPolicies(
+                CONTAINER_NAME, null, fallbackPolicy2);
+        AzurePersistence drPersistence2 = new AzurePersistence(
+                fallbackReadClient2, primaryWriteClient, primaryNoRetryClient,
+                secondaryReadClient, ROOT_PREFIX, null, null);
+        try (FileStore fs = FileStoreTestUtil.createFileStore(folder.newFolder(), drPersistence2)) {
+            SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
+            assertEquals("primary", ns.getRoot().getChildNode("dr-written").getString("source"));
+            assertEquals(0, (long) ns.getRoot().getChildNode("node-0").getLong("index"));
+        }
+
+        // 8. Verify new content is NOT on secondary
         AzurePersistence secondaryOnly = new AzurePersistence(secondaryReadClient, secondaryWriteClient, secondaryNoRetryClient, ROOT_PREFIX);
         try (FileStore fs = FileStoreTestUtil.createFileStore(folder.newFolder(), secondaryOnly)) {
             SegmentNodeStore ns = SegmentNodeStoreBuilders.builder(fs).build();
             assertNull("New content should not be on secondary",
-                    ns.getRoot().getChildNode("dr-new-node").getString("drProp"));
+                    ns.getRoot().getChildNode("dr-written").getString("source"));
         }
     }
 
@@ -219,7 +315,7 @@ public class AzureDRModeTest {
     private List<BlobItem> listSegmentBlobs(BlobContainerClient client) {
         return listAllBlobs(client, ROOT_PREFIX).stream()
                 .filter(blob -> SEGMENT_PATTERN.matcher(AzureUtilities.getName(blob)).matches())
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private List<BlobItem> listAllBlobs(BlobContainerClient client, String prefix) {
@@ -230,14 +326,26 @@ public class AzureDRModeTest {
 
     private void copyBlobBetweenAzuriteInstances(BlobContainerClient source, BlobContainerClient destination, String blobName) {
         byte[] data = source.getBlobClient(blobName).downloadContent().toBytes();
-        java.util.Map<String, String> metadata = source.getBlobClient(blobName).getProperties().getMetadata();
-        com.azure.storage.blob.options.BlockBlobSimpleUploadOptions uploadOptions =
-                new com.azure.storage.blob.options.BlockBlobSimpleUploadOptions(
-                        new java.io.ByteArrayInputStream(data), data.length);
-        if (metadata != null && !metadata.isEmpty()) {
-            uploadOptions.setMetadata(metadata);
+        Map<String, String> metadata = source.getBlobClient(blobName).getProperties().getMetadata();
+        BlobType blobType = source.getBlobClient(blobName).getProperties().getBlobType();
+
+        if (APPEND_BLOB.equals(blobType)) {
+            AppendBlobClient appendClient = destination.getBlobClient(blobName).getAppendBlobClient();
+            appendClient.create(true);
+            if (data.length > 0) {
+                appendClient.appendBlock(new ByteArrayInputStream(data), data.length);
+            }
+            if (metadata != null && !metadata.isEmpty()) {
+                appendClient.setMetadata(metadata);
+            }
+        } else {
+            BlockBlobSimpleUploadOptions uploadOptions =
+                    new BlockBlobSimpleUploadOptions(new ByteArrayInputStream(data), data.length);
+            if (metadata != null && !metadata.isEmpty()) {
+                uploadOptions.setMetadata(metadata);
+            }
+            destination.getBlobClient(blobName).getBlockBlobClient().uploadWithResponse(
+                    uploadOptions, null, null);
         }
-        destination.getBlobClient(blobName).getBlockBlobClient().uploadWithResponse(
-                uploadOptions, null, null);
     }
 }
